--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/devlooping
 spring.datasource.username=devlooping
 spring.datasource.password=devlooping2024
+
+#opciones spring docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+#swagger ui route
+springdoc.swagger-ui.path=/doc/swagger-ui.html
+#springdoc.packagesToScan=com.devlooping
+springdoc.pathsToMatch=/api/**
