--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 #swagger ui route
-springdoc.swagger-ui.path=/doc/swagger-ui.html
+springdoc.swagger-ui.path=  
 #springdoc.packagesToScan=com.devlooping
 springdoc.pathsToMatch=/api/**
+
+#Spring Security Properties
+spring.security.user.name=devlooping
+spring.security.user.password=devlooping2024
