--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 	<dependencies>
 	<!-- ADD SPRING SECURITY -->
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-crypto</artifactId>
-			<version>5.5.1</version>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.3</version>
 		</dependency>
 
 		<dependency>
